src/grammardesc/co/edu/eafit/dis/st0270/PracticaCompiladoresMD/parser/defANTLRPracticaCompiladoresMDParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g 2012-06-04 23:36:01

	package grammardesc.co.edu.eafit.dis.st0270.PracticaCompiladoresMD.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class defANTLRPracticaCompiladoresMDParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIASA", "Fecha", "Hora", "LengTipo", "UbicacionC", "Int", "Bool", "String", "Comentarios", "NEWLINE", "WS", "'$'", "'.'", "'$$'", "'^-'", "'-^'", "'/'", "'..'", "'%'", "'°'", "'%%'", "':'", "'~'", "','", "'¿'", "'nombre'", "'?'", "'#'", "'<<'", "'>>'", "'##'", "'-'", "'||'", "'&&'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'+'", "'*'", "'//'", "'!'", "'('", "')'", "'%='", "'{'", "'}'", "'=%'", "'@'", "';'", "'else'", "'if'", "'while'"
    };
    public static final int EOF=-1;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int ALIASA=4;
    public static final int Fecha=5;
    public static final int Hora=6;
    public static final int LengTipo=7;
    public static final int UbicacionC=8;
    public static final int Int=9;
    public static final int Bool=10;
    public static final int String=11;
    public static final int Comentarios=12;
    public static final int NEWLINE=13;
    public static final int WS=14;

    // delegates
    // delegators


        public defANTLRPracticaCompiladoresMDParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public defANTLRPracticaCompiladoresMDParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return defANTLRPracticaCompiladoresMDParser.tokenNames; }
    public String getGrammarFileName() { return "/home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g"; }


        protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
        throws RecognitionException
        {
            throw new MismatchedTokenException(ttype, input);
        }




    // $ANTLR start "prog"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:27:1: prog : defANTLRPracticaCompiladoresMD EOF ;
    public final void prog() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:27:11: ( defANTLRPracticaCompiladoresMD EOF )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:27:19: defANTLRPracticaCompiladoresMD EOF
            {
            pushFollow(FOLLOW_defANTLRPracticaCompiladoresMD_in_prog70);
            defANTLRPracticaCompiladoresMD();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_prog72); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "defANTLRPracticaCompiladoresMD"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:1: defANTLRPracticaCompiladoresMD : ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+ ;
    public final void defANTLRPracticaCompiladoresMD() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:33: ( ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+ )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:35: ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+
            {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:35: ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+
            int cnt1=0;
            loop1:
            do {
                int alt1=6;
                switch ( input.LA(1) ) {
                case 15:
                    {
                    alt1=1;
                    }
                    break;
                case 22:
                    {
                    alt1=2;
                    }
                    break;
                case 28:
                    {
                    alt1=3;
                    }
                    break;
                case 50:
                    {
                    alt1=4;
                    }
                    break;
                case 31:
                    {
                    alt1=5;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:37: listLengArchivo
            	    {
            	    pushFollow(FOLLOW_listLengArchivo_in_defANTLRPracticaCompiladoresMD82);
            	    listLengArchivo();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:55: listLengClases
            	    {
            	    pushFollow(FOLLOW_listLengClases_in_defANTLRPracticaCompiladoresMD86);
            	    listLengClases();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:72: listLengComandos
            	    {
            	    pushFollow(FOLLOW_listLengComandos_in_defANTLRPracticaCompiladoresMD90);
            	    listLengComandos();

            	    state._fsp--;


            	    }
            	    break;
            	case 4 :
            	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:91: listLengFns
            	    {
            	    pushFollow(FOLLOW_listLengFns_in_defANTLRPracticaCompiladoresMD94);
            	    listLengFns();

            	    state._fsp--;


            	    }
            	    break;
            	case 5 :
            	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:28:105: listLengApp
            	    {
            	    pushFollow(FOLLOW_listLengApp_in_defANTLRPracticaCompiladoresMD98);
            	    listLengApp();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "defANTLRPracticaCompiladoresMD"


    // $ANTLR start "listLengArchivo"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:37:1: listLengArchivo : '$' ALIASA '.' ALIASA opcionesA '$$' ;
    public final void listLengArchivo() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:37:18: ( '$' ALIASA '.' ALIASA opcionesA '$$' )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:37:20: '$' ALIASA '.' ALIASA opcionesA '$$'
            {
            match(input,15,FOLLOW_15_in_listLengArchivo117); 
            match(input,ALIASA,FOLLOW_ALIASA_in_listLengArchivo119); 
            match(input,16,FOLLOW_16_in_listLengArchivo121); 
            match(input,ALIASA,FOLLOW_ALIASA_in_listLengArchivo123); 
            pushFollow(FOLLOW_opcionesA_in_listLengArchivo125);
            opcionesA();

            state._fsp--;

            match(input,17,FOLLOW_17_in_listLengArchivo127); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "listLengArchivo"


    // $ANTLR start "opcionesA"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:1: opcionesA : '^-' ( ubicacionA | ) ( Fecha | ) ( Hora | ) '-^' ;
    public final void opcionesA() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:12: ( '^-' ( ubicacionA | ) ( Fecha | ) ( Hora | ) '-^' )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:14: '^-' ( ubicacionA | ) ( Fecha | ) ( Hora | ) '-^'
            {
            match(input,18,FOLLOW_18_in_opcionesA135); 
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:19: ( ubicacionA | )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==16||(LA2_0>=20 && LA2_0<=21)) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=Fecha && LA2_0<=Hora)||LA2_0==19) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:20: ubicacionA
                    {
                    pushFollow(FOLLOW_ubicacionA_in_opcionesA138);
                    ubicacionA();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:33: 
                    {
                    }
                    break;

            }

            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:35: ( Fecha | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==Fecha) ) {
                alt3=1;
            }
            else if ( (LA3_0==Hora||LA3_0==19) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:36: Fecha
                    {
                    match(input,Fecha,FOLLOW_Fecha_in_opcionesA145); 

                    }
                    break;
                case 2 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:44: 
                    {
                    }
                    break;

            }

            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:46: ( Hora | )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Hora) ) {
                alt4=1;
            }
            else if ( (LA4_0==19) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:47: Hora
                    {
                    match(input,Hora,FOLLOW_Hora_in_opcionesA152); 

                    }
                    break;
                case 2 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:38:54: 
                    {
                    }
                    break;

            }

            match(input,19,FOLLOW_19_in_opcionesA158); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "opcionesA"


    // $ANTLR start "ubicacionA"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:39:1: ubicacionA : ( relativa | ( '/' ALIASA )+ );
    public final void ubicacionA() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:39:13: ( relativa | ( '/' ALIASA )+ )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==16||LA6_0==21) ) {
                alt6=1;
            }
            else if ( (LA6_0==20) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:39:15: relativa
                    {
                    pushFollow(FOLLOW_relativa_in_ubicacionA166);
                    relativa();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:39:26: ( '/' ALIASA )+
                    {
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:39:26: ( '/' ALIASA )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==20) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:39:27: '/' ALIASA
                    	    {
                    	    match(input,20,FOLLOW_20_in_ubicacionA171); 
                    	    match(input,ALIASA,FOLLOW_ALIASA_in_ubicacionA172); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);


                    }
                    break;

            }
        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "ubicacionA"


    // $ANTLR start "relativa"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:1: relativa : ( '.' ( '/' ALIASA )+ | '..' ( '/' ALIASA )+ );
    public final void relativa() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:11: ( '.' ( '/' ALIASA )+ | '..' ( '/' ALIASA )+ )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==16) ) {
                alt9=1;
            }
            else if ( (LA9_0==21) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:13: '.' ( '/' ALIASA )+
                    {
                    match(input,16,FOLLOW_16_in_relativa183); 
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:16: ( '/' ALIASA )+
                    int cnt7=0;
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==20) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:17: '/' ALIASA
                    	    {
                    	    match(input,20,FOLLOW_20_in_relativa185); 
                    	    match(input,ALIASA,FOLLOW_ALIASA_in_relativa186); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt7 >= 1 ) break loop7;
                                EarlyExitException eee =
                                    new EarlyExitException(7, input);
                                throw eee;
                        }
                        cnt7++;
                    } while (true);


                    }
                    break;
                case 2 :
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:31: '..' ( '/' ALIASA )+
                    {
                    match(input,21,FOLLOW_21_in_relativa192); 
                    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:35: ( '/' ALIASA )+
                    int cnt8=0;
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==20) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:41:36: '/' ALIASA
                    	    {
                    	    match(input,20,FOLLOW_20_in_relativa194); 
                    	    match(input,ALIASA,FOLLOW_ALIASA_in_relativa195); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt8 >= 1 ) break loop8;
                                EarlyExitException eee =
                                    new EarlyExitException(8, input);
                                throw eee;
                        }
                        cnt8++;
                    } while (true);


                    }
                    break;

            }
        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "relativa"


    // $ANTLR start "listLengClases"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:48:1: listLengClases : '%' ALIASA '°' ALIASA '°' propiedad '%%' ;
    public final void listLengClases() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:48:17: ( '%' ALIASA '°' ALIASA '°' propiedad '%%' )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:48:19: '%' ALIASA '°' ALIASA '°' propiedad '%%'
            {
            match(input,22,FOLLOW_22_in_listLengClases307); 
            match(input,ALIASA,FOLLOW_ALIASA_in_listLengClases309); 
            match(input,23,FOLLOW_23_in_listLengClases311); 
            match(input,ALIASA,FOLLOW_ALIASA_in_listLengClases313); 
            match(input,23,FOLLOW_23_in_listLengClases315); 
            pushFollow(FOLLOW_propiedad_in_listLengClases317);
            propiedad();

            state._fsp--;

            match(input,24,FOLLOW_24_in_listLengClases319); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "listLengClases"


    // $ANTLR start "propiedad"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:50:1: propiedad : ( tripleta )+ ;
    public final void propiedad() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:50:12: ( ( tripleta )+ )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:50:14: ( tripleta )+
            {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:50:14: ( tripleta )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==LengTipo) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:50:15: tripleta
            	    {
            	    pushFollow(FOLLOW_tripleta_in_propiedad329);
            	    tripleta();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);


            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "propiedad"


    // $ANTLR start "tripleta"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:51:1: tripleta : LengTipo ':' ALIASA '~' expresion ',' ;
    public final void tripleta() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:51:11: ( LengTipo ':' ALIASA '~' expresion ',' )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:51:13: LengTipo ':' ALIASA '~' expresion ','
            {
            match(input,LengTipo,FOLLOW_LengTipo_in_tripleta339); 
            match(input,25,FOLLOW_25_in_tripleta341); 
            match(input,ALIASA,FOLLOW_ALIASA_in_tripleta343); 
            match(input,26,FOLLOW_26_in_tripleta345); 
            pushFollow(FOLLOW_expresion_in_tripleta347);
            expresion();

            state._fsp--;

            match(input,27,FOLLOW_27_in_tripleta349); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "tripleta"


    // $ANTLR start "listLengComandos"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:55:1: listLengComandos : '¿' 'nombre' '~' ALIASA '~' UbicacionC '?' ;
    public final void listLengComandos() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:55:18: ( '¿' 'nombre' '~' ALIASA '~' UbicacionC '?' )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:55:20: '¿' 'nombre' '~' ALIASA '~' UbicacionC '?'
            {
            match(input,28,FOLLOW_28_in_listLengComandos359); 
            match(input,29,FOLLOW_29_in_listLengComandos361); 
            match(input,26,FOLLOW_26_in_listLengComandos363); 
            match(input,ALIASA,FOLLOW_ALIASA_in_listLengComandos365); 
            match(input,26,FOLLOW_26_in_listLengComandos367); 
            match(input,UbicacionC,FOLLOW_UbicacionC_in_listLengComandos369); 
            match(input,30,FOLLOW_30_in_listLengComandos371); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "listLengComandos"


    // $ANTLR start "listLengApp"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:60:1: listLengApp : '#' Int ALIASA '<<' argumentoIN '<<' '>>' argumentoOUT '>>' opcionesApp '°' descripcionApp '°' '##' ;
    public final void listLengApp() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:60:14: ( '#' Int ALIASA '<<' argumentoIN '<<' '>>' argumentoOUT '>>' opcionesApp '°' descripcionApp '°' '##' )
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:60:16: '#' Int ALIASA '<<' argumentoIN '<<' '>>' argumentoOUT '>>' opcionesApp '°' descripcionApp '°' '##'
            {
            match(input,31,FOLLOW_31_in_listLengApp395); 
            match(input,Int,FOLLOW_Int_in_listLengApp397); 
            match(input,ALIASA,FOLLOW_ALIASA_in_listLengApp401); 
            match(input,32,FOLLOW_32_in_listLengApp403); 
            pushFollow(FOLLOW_argumentoIN_in_listLengApp405);
            argumentoIN();

            state._fsp--;

            match(input,32,FOLLOW_32_in_listLengApp407); 
            match(input,33,FOLLOW_33_in_listLengApp409); 
            pushFollow(FOLLOW_argumentoOUT_in_listLengApp411);
            argumentoOUT();

            state._fsp--;

            match(input,33,FOLLOW_33_in_listLengApp413); 
            pushFollow(FOLLOW_opcionesApp_in_listLengApp415);
            opcionesApp();

            state._fsp--;

            match(input,23,FOLLOW_23_in_listLengApp417); 
            pushFollow(FOLLOW_descripcionApp_in_listLengApp419);
            descripcionApp();

            state._fsp--;

            match(input,23,FOLLOW_23_in_listLengApp421); 
            match(input,34,FOLLOW_34_in_listLengApp423); 

            }

        }

            catch (RecognitionException e) 
                {
                    throw e;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end "listLengApp"


    // $ANTLR start "argumentoIN"
    // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:61:1: argumentoIN : ( archivo | ALIASA | archivo argumentoIN | ALIASA argumentoIN );
    public final void argumentoIN() throws RecognitionException {
        try {
            // /home/jvidalva/Escritorio/practica_compiladoresmd/trunk/src/grammardesc/defANTLRPracticaCompiladoresMD.g:61:14: ( archivo | ALIASA | archivo argumentoIN | ALIASA argumentoIN )
            int alt11=4;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==ALIASA) ) {
                switch ( input.LA(2) ) {
                case 16:
                    {
                    int LA11_2 = input.LA(3);

                    if ( (LA11_2==ALIASA) ) {
                        int LA11_5 = input.LA(4);
